tests/tests/snapshots/integration__run_images@text6.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/text6.gleam
---
<svg width="80.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.0 0.0 L 80.0 0.0 L 80.0 30.0 L 0.0 30.0 Z" fill="rgba(0, 0, 255, 1.0)" />
    <text dominant-baseline="alphabetic" text-anchor="start" x="0.0" y="0.0" font-family="sans-serif" font-size="20.0" font-style="normal" font-weight="normal" transform="translate(40.0,15.0) rotate(0.0 0.0 0.0) scale(1.0,1.0)" fill="rgba(255, 255, 255, 1.0)" >Hello</text>
  </g>
</svg>
