tests/tests/snapshots/integration__run_images@triangle1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/triangle1.gleam
---
<svg width="40.0" height="35.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 20.0 0.0 L 40.0 34.641016 L 0.0 34.641016 Z" fill="rgba(210, 180, 140, 1.0)" />
</svg>
