tests/tests/snapshots/integration__run_images@triangle_aas1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/triangle_aas1.gleam
---
<svg width="200.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 200.0 0.0 L 165.270364 29.141624 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
