tests/tests/snapshots/integration__run_images@triangle_ssa1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/triangle_ssa1.gleam
---
<svg width="97.0" height="25.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 42.217378 0.0 L 96.90686 24.679152 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
