tests/tests/snapshots/integration__run_images@triangle_sss1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/triangle_sss1.gleam
---
<svg width="80.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 80.0 0.0 L 52.5 29.047375096555623 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
